# cellshape

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  LICENSE  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_and_deploy.yml
cellshape/: __init__.py  cellshape_train.py  main.py  train.py
cellshape/helpers/: helper_modules.py  plotting.py  reports.py
docs/: CONTRIBUTING.md
docs/notebooks/: Untitled.ipynb  deep_embedded_clustering_results.ipynb  extract_features.ipynb  extract_features_predict_treatment.ipynb  extract_features_predict_treatment_test_correct_normalisation.ipynb  make_small_dataset.ipynb  plot_feature_landscape.ipynb  this_extracts_features_for_best_prediction.ipynb  training_exaple.ipynb
~/Documents/cellshapeOutput/runs/dgcnn_foldingnetbasic_128_pretrained_001/: events.out.tfevents.1657544384.30247CMBDT.831066.0
